Bug 426639 - Kmail Undo Send option doesn't work
Summary: Kmail Undo Send option doesn't work
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git (master)
Platform: Neon Linux
: NOR major
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-09-17 13:38 UTC by soporte.inf
Modified: 2020-09-17 17:42 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.15.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description soporte.inf 2020-09-17 13:38:40 UTC
SUMMARY
Undo Send option enabled in Kmail don't show notification to cancel sending.
Changing delay time to 10, 20 or 30 seconds don't take effect either.


STEPS TO REPRODUCE
1. Enable Undo send in configuration
2. Write a mail
3. Send

OBSERVED RESULT
Email sent without the delay and the notification which allows you to cancel sending.

EXPECTED RESULT
The configured delay before an email gets really sent. During that delay get a notification which allows you to cancel sending.



SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 5.19.5
(available in About System)
KDE Plasma Version: 5.19.5
KDE Frameworks Version: 5.74.0
Qt Version: 5.15.0

ADDITIONAL INFORMATION
Running OS KDE Neon User Edition (Focal)
Comment 1 Laurent Montel 2020-09-17 14:22:55 UTC
I confirm it. Don't know what is broken yet.
I will work on it today.
Comment 2 Laurent Montel 2020-09-17 17:42:40 UTC
Git commit 57f4f57c7d95516cdc67fd5977b0d0d7badf98a1 by Laurent Montel.
Committed on 17/09/2020 at 17:42.
Pushed by mlaurent into branch 'release/20.08'.

Fix Bug 426639 - Kmail Undo Send option doesn't work
FIXED-IN: 5.15.2

M  +1    -0    messagecomposer/src/composer/composerviewbase.cpp

https://invent.kde.org/pim/messagelib/commit/57f4f57c7d95516cdc67fd5977b0d0d7badf98a1