Fix Bug 426639 - Kmail Undo Send option doesn't work

BUG: 426639
FIXED-IN: 5.15.2